--- a/module3_opdracht4/assets/css/style.css
+++ b/module3_opdracht4/assets/css/style.css
@@ -13,6 +13,7 @@
 body {
     font-size: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(214, 213, 213);
 }
 
 #container {
@@ -25,26 +26,26 @@ body {
 #header {
     width: 100%;
     height: 40vh;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(58, 58, 60);
 }
 
 #nav {
     width: 100%;
     height: 7vh;
     margin:10px auto;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(58, 58, 60);
 }
 
 #footer {
     width: 100%;
     height: 40vh;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(58, 58, 60);
 }
 
 #main {
     width: 67.5%;
     height: 80vh;
-    background-color: rgb(202, 218, 237);
+    background-color: rgb(165, 162, 160);
     text-align: center;
 }
 
@@ -52,26 +53,26 @@ body {
     width: 65.25%;
     margin: 20px auto;
     height: 20vh;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(74, 74, 77);
 }
 
 #articletwee {
     width: 65.25%;
     margin: 20px auto;
     height: 20vh;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(60, 59, 58);
 }
 
 #articledrie {
     width: 65.25%;
     margin: 20px auto;
     height: 20vh;
-    background-color: rgb(0, 136, 255);
+    background-color: rgb(58, 58, 60);
 }
 
 #aside {
     width: 25%;
     height: 70vh;
     float: right;
-    background-color: rgb(202, 218, 237);
+    background-color: rgb(165, 162, 160)
 }
